<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Navigation Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="Back Button"
            android:src="@drawable/baseline_arrow_back_ios_24" />

        <!-- Title -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Logo -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/logo"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="34dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- User Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="Password"
                    android:inputType="textPersonName"
                    android:textSize="24sp"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Buttons (Forgot Password and Login) -->

            <!-- "Don't have an account?" text and Signup Button -->
            <LinearLayout
                android:layout_width="361dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/forgotpassword"
                    android:layout_width="132dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/login_button_bk"
                    android:maxLines="5"
                    android:text="Forgot Password or Login with OTP"
                    android:textColor="@color/white"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_button_bk"
                    android:maxLines="5"
                    android:text="Login"
                    android:textColor="@color/white" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="245dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="4dp"
                    android:text="Don't have an account"
                    android:textColor="#000000"
                    android:textSize="22sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <Button
                    android:id="@+id/SignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_button_bk"
                    android:text="Signup"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Social Media Login Buttons -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <!-- Google Login Button -->
                <Button
                    android:id="@+id/btn_sign_in_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/login_button_bk"
                    android:text="Login with Google"
                    android:textColor="@color/white" />

                <!-- Facebook Login Button -->
                <Button
                    android:id="@+id/facebookLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Login with Facebook"
                    android:textColor="@color/white"
                    android:background="@drawable/login_button_bk"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp" />

                <!-- Twitter Login Button -->
                <Button
                    android:id="@+id/twitterLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Login with Twitter"
                    android:textColor="@color/white"
                    android:background="@drawable/login_button_bk"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <!-- Bottom Navigation View -->


</LinearLayout>
